KUBE/Ingress-application/app3-react-java-mysql/k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-db-deployment
  namespace: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mariadb:10.6.4-focal
          ports:
            - containerPort: 3306
