KUBE/Ingress-application/app3-react-java-mysql/k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app3-db-service
  namespace: app3
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
