KUBE/Ingress-application/app3-react-java-mysql/k8s/app3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-frontend-ingress
  namespace: app3
spec:
  ingressClassName: nginx
  rules:
    - host: app3.avej.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-frontend-service
                port:
                  number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-backend-ingress
  namespace: app3
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app3.avej.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app3-backend-service
                port:
                  number: 8080
